--- a/package.json
+++ b/package.json
@@ -149,14 +149,13 @@
         "bignumber.js": "^4.0.0",
         "bitshares-report": "https://github.com/bitshares/bitshares-report.git",
         "bitshares-ui-style-guide": "https://github.com/bitshares/bitshares-ui-style-guide.git",
-        "bitsharesjs": "^5.0.0",
+        "bitsharesjs": "^6.0.0-rc1",
         "browser-locale": "^1.0.3",
         "classnames": "^2.2.1",
         "constants-browserify": "^1.0.0",
         "cookies-js": "^1.2.1",
         "counterpart": "^0.18.5",
         "crypto-browserify": "^3.12.0",
-        "event-emitter": "^0.3.4",
         "file-saver": "^1.3.8",
         "foundation-apps": "git+https://github.com/zurb/foundation-apps.git",
         "fractional": "^1.0.0",
