--- a/package.json
+++ b/package.json
@@ -187,12 +187,12 @@
         "qrcode": "^1.4.4",
         "qrcode.react": "^0.7.1",
         "query-string": "^6.1.0",
-        "react": "^16.11.0",
-        "react-autocomplete": "^1.7.2",
+        "react": "16.14.0",
+        "react-autocomplete": "^1.8.1",
         "react-clipboard.js": "^1.0.1",
         "react-copy-to-clipboard": "^5.0.2",
         "react-debounce-render": "^7.0.0",
-        "react-dom": "^16.11.0",
+        "react-dom": "16.14.0",
         "react-foundation-apps": "git+https://github.com/bitshares/react-foundation-apps.git",
         "react-highcharts": "^16.1.0",
         "react-interpolate-component": "^0.12.0",
@@ -205,7 +205,8 @@
         "react-responsive-mixin": "^0.4.0",
         "react-router-dom": "^5.1.2",
         "react-scroll": "^1.8.1",
-        "react-tooltip": "^3.11.6",
+        "react-sticky-table": "^5.1.11",
+        "react-tooltip": "^4.2.21",
         "react-transition-group": "^1.2.0",
         "react-translate-component": "^0.15.1",
         "steem-js-api": "^0.7.1",
@@ -266,9 +267,9 @@
         "postcss-loader": "^6.2.1",
         "prettier": "^1.10.2",
         "pretty-quick": "^1.4.1",
+        "react-codemod": "^5.4.3",
         "react-hot-loader": "^4.13.0",
         "react-perf-devtool": "^3.1.8",
-        "react-sticky-table": "1.2.0",
         "sass": "^1.45.1",
         "sass-loader": "^12.4.0",
         "script-loader": "^0.7.2",
