--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "license": "MIT",
     "engines": {
         "node": ">=16.x",
-        "npm": ">=8.x",
-        "yarn": ">=0.21.3"
+        "yarn": ">=1.22.17"
     },
     "repository": {
         "type": "git",
@@ -22,17 +21,17 @@
     },
     "main": "build/electron/index.js",
     "scripts": {
-        "postinstall": "npm run install-charting-library",
+        "postinstall": "yarn run install-charting-library",
         "compile-tv-css": "sass ./charting_library/scss/:./charting_library/ --style compressed",
-        "install-charting-library": "node ./charting_library/install-charting-library.cjs && npm run compile-tv-css",
-        "test:market": "cross-env NODE_ENV=test mocha --require babel-core/register --watch --watch-extensions js ./app/test/marketTests",
+        "install-charting-library": "node ./charting_library/install-charting-library.cjs && yarn run compile-tv-css",
+        "test:market": "cross-env NODE_ENV=test mocha --require @babel/register --watch --watch-extensions js ./app/test/marketTests",
         "bench:market": "cross-env NODE_ENV=test babel ./lib/common/MarketClasses.js -o ./app/test/MarketClasses.js && cross-env NODE_ENV=test node --harmony ./test/marketBenchmark",
         "profile-dev": "webpack --env dev --env profile --profile --json > stats-dev.json",
         "profile-build": "cross-env NODE_ENV=production webpack --env prod --env profile --env hash --env baseUrl=false --profile --json > stats-prod.json",
         "profile-nougly": "cross-env NODE_ENV=production webpack --env prod --env profile --env hash --env noUgly --profile --json > stats-prod-nougly.json",
         "start": "cross-env NODE_ENV=development webpack serve",
         "start-perf": "cross-env NODE_ENV=development webpack serve perf-dev",
-        "prestart-electron": "cross-env NODE_ENV=production webpack --env hash --env noUgly --env electron --env prod && npm run prepare-electron",
+        "prestart-electron": "cross-env NODE_ENV=production webpack --env hash --env noUgly --env electron --env prod && yarn run prepare-electron",
         "start-electron": "electron build/electron/index.js",
         "fix-locale-files": "node ./app/assets/locales-fixup.js",
         "create-notification-string": "node ./app/assets/create-notifcation-string.js",
@@ -46,19 +45,19 @@
         "build-electron": "cross-env NODE_ENV=production webpack --env prod --env electron --env hash",
         "build-electron-nougly": "cross-env NODE_ENV=production webpack --env prod --env electron --env noUgly --env hash --progress --display-error-details --colors",
         "prepare-electron": "copyfiles -f resources/*.js build/electron/",
-        "postbuild-electron": "npm run prepare-electron",
-        "postbuild-electron-nougly": "npm run prepare-electron",
+        "postbuild-electron": "yarn run prepare-electron",
+        "postbuild-electron-nougly": "yarn run prepare-electron",
         "build-win32": "cross-env NODE_ENV=production && webpack --env prod --progress --colors &&  echo 'copying to electron/build..' &&  xcopy dist ..\\electron\\build /s /e /y && echo 'done.'",
         "precommit": "pretty-quick --staged",
-        "prepackage": "npm run build-electron",
-        "prepackage-no-ugly": "npm run build-electron-nougly",
+        "prepackage": "yarn run build-electron",
+        "prepackage-no-ugly": "yarn run build-electron-nougly",
         "package": "electron-builder -p never",
         "package-charting-library": "node ./charting_library/package-charting-library.js",
         "package-no-ugly": "electron-builder -p never",
-        "package-deb": "npm run prepackage && electron-builder  -p never --linux deb",
-        "package-snap": "npm run prepackage && electron-builder  -p never --linux snap",
-        "package-win": "npm run prepackage && electron-builder  -p never --windows",
-        "package-mac": "npm run prepackage && electron-builder  -p never --mac dmg",
+        "package-deb": "yarn run prepackage && electron-builder  -p never --linux deb",
+        "package-snap": "yarn run prepackage && electron-builder  -p never --linux snap",
+        "package-win": "yarn run prepackage && electron-builder  -p never --windows",
+        "package-mac": "yarn run prepackage && electron-builder  -p never --mac dmg",
         "postpackage": "node write_digest.js",
         "scam": "node scamParser.js"
     },
@@ -224,6 +223,7 @@
         "@babel/preset-env": "^7.16.4",
         "@babel/preset-react": "^7.16.0",
         "@babel/preset-stage-0": "^7.8.3",
+        "@babel/register": "^7.16.9",
         "@hot-loader/react-dom": "16",
         "archiver": "^3.0.0",
         "autoprefixer": "^9.5.1",
