--- a/package.json
+++ b/package.json
@@ -148,7 +148,7 @@
         "bignumber.js": "^4.0.0",
         "bitshares-report": "https://github.com/bitshares/bitshares-report.git",
         "bitshares-ui-style-guide": "https://github.com/bitshares/bitshares-ui-style-guide.git",
-        "bitsharesjs": "^6.0.0-rc1",
+        "bitsharesjs": "https://github.com/bitshares/bitsharesjs.git#develop",
         "browser-locale": "^1.0.3",
         "classnames": "^2.2.1",
         "constants-browserify": "^1.0.0",
