show credit offer rate table

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         "postbuild-electron": "yarn run prepare-electron",
         "postbuild-electron-nougly": "yarn run prepare-electron",
         "build-win32": "cross-env NODE_ENV=production && webpack --env prod --progress --colors &&  echo 'copying to electron/build..' &&  xcopy dist ..\\electron\\build /s /e /y && echo 'done.'",
-        "precommit": "pretty-quick --staged",
+        "precommit": "",
         "prepackage": "yarn run build-electron",
         "prepackage-no-ugly": "yarn run build-electron-nougly",
         "package": "electron-builder -p never",
@@ -148,7 +148,7 @@
         "bignumber.js": "^4.0.0",
         "bitshares-report": "https://github.com/bitshares/bitshares-report.git",
         "bitshares-ui-style-guide": "https://github.com/bitshares/bitshares-ui-style-guide.git",
-        "bitsharesjs": "^6.0.0-rc1",
+        "bitsharesjs": "https://github.com/bitshares/bitsharesjs.git#develop",
         "browser-locale": "^1.0.3",
         "classnames": "^2.2.1",
         "constants-browserify": "^1.0.0",
