--- a/.github/workflows/npm-build-and-deploy-develop.yml
+++ b/.github/workflows/npm-build-and-deploy-develop.yml
@@ -11,7 +11,7 @@ jobs:
 
         strategy:
             matrix:
-                node-version: [16.x]
+                node-version: [16.13.x]
 
         steps:
             - uses: actions/checkout@v2
@@ -19,6 +19,7 @@ jobs:
               uses: actions/setup-node@v1
               with:
                   node-version: ${{ matrix.node-version }}
+            - run: corepack enable
             - run: yarn install --frozen-lockfile
             - run: yarn run build-hash
             - name: Create CNAME file
