--- a/.github/workflows/npm-build-and-deploy-develop.yml
+++ b/.github/workflows/npm-build-and-deploy-develop.yml
@@ -11,7 +11,7 @@ jobs:
 
         strategy:
             matrix:
-                node-version: [16.13.x]
+                node-version: [16.13.1]
 
         steps:
             - uses: actions/checkout@v2
