--- a/.github/workflows/npm-build-and-deploy-staging.yml
+++ b/.github/workflows/npm-build-and-deploy-staging.yml
@@ -11,7 +11,7 @@ jobs:
 
         strategy:
             matrix:
-                node-version: [10.x]
+                node-version: [16.13.1]
 
         steps:
             - uses: actions/checkout@v2
@@ -19,8 +19,9 @@ jobs:
               uses: actions/setup-node@v1
               with:
                   node-version: ${{ matrix.node-version }}
-            - run: npm ci
-            - run: npm run build-hash
+            - run: corepack enable
+            - run: yarn install --network-concurrency 1 --frozen-lockfile
+            - run: yarn run build-hash
             - name: Create CNAME file
               uses: finnp/create-file-action@master
               env:
