--- a/.github/workflows/npm-build-and-deploy-develop.yml
+++ b/.github/workflows/npm-build-and-deploy-develop.yml
@@ -1,5 +1,5 @@
 # This workflow will do a clean install of node dependencies, build the source code and push the binaries to the deployment repository.
-name: Continuous Delivery and Deployment
+name: Build & Deploy develop
 
 on:
     push:
