exchange eslint setting

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,7 @@
         "react", "json"
     ],
     "extends": ["plugin:react/recommended"],
-    "parser": "babel-eslint",
+    "parser": "@babel/eslint-parser",
     "env": {
         "browser": true,
         "node": true,
