--- a/.github/workflows/build-release-binaries.yml
+++ b/.github/workflows/build-release-binaries.yml
@@ -20,12 +20,12 @@ jobs:
               uses: actions/setup-node@v1
               with:
                   node-version: ${{ matrix.node-version }}
-            - run: brew install jq
-            - run: echo "PackageVersion=$(cat package.json | jq '.version' | sed 's/\"//g')" >> $GITHUB_ENV
-            - name: Update package.json
-              run: |
-                  sed -i -e "s/${{ env.PackageVersion }}/${{ github.ref_name }}/g" package.json
-            - run: yarn
+            #- run: brew install jq
+            #- run: echo "PackageVersion=$(cat package.json | jq '.version' | sed 's/\"//g')" >> $GITHUB_ENV
+            #- name: Update package.json
+            #  run: |
+            #      sed -i -e "s/${{ env.PackageVersion }}/${{ github.ref_name }}/g" package.json
+            - run: yarn install --network-concurrency 1 --frozen-lockfile
             - name: Build package
               run: npm run prepackage
             - name: Build dmg
@@ -82,7 +82,8 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
                   upload_url: ${{ steps.create_release.outputs.upload_url }}
-                  asset_path: ./build/binaries/BitShares_${{ github.ref_name }}.dmg
+                  asset_path:
+                      ./build/binaries/BitShares_${{ github.ref_name }}.dmg
                   asset_name: BitShares_${{ github.ref_name }}.dmg
                   asset_content_type: application/octet-stream
             - name: Upload deb
@@ -91,7 +92,8 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
                   upload_url: ${{ steps.create_release.outputs.upload_url }}
-                  asset_path: ./build/binaries/BitShares_${{ github.ref_name }}.deb
+                  asset_path:
+                      ./build/binaries/BitShares_${{ github.ref_name }}.deb
                   asset_name: BitShares_${{ github.ref_name }}.deb
                   asset_content_type: application/x-deb
             - name: Upload exe
@@ -100,6 +102,7 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
                   upload_url: ${{ steps.create_release.outputs.upload_url }}
-                  asset_path: ./build/binaries/BitShares_${{ github.ref_name }}.exe
+                  asset_path:
+                      ./build/binaries/BitShares_${{ github.ref_name }}.exe
                   asset_name: BitShares_${{ github.ref_name }}.exe
                   asset_content_type: application/octet-stream
