set permission contents to write for localwallet build

--- a/.github/workflows/build-release-binaries.yml
+++ b/.github/workflows/build-release-binaries.yml
@@ -6,6 +6,9 @@ on:
             - "*.*.*"
             # branches: [testaction]
 
+permissions:
+    contents: write
+
 jobs:
     build:
         runs-on: macOS-latest
