--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
         "handlebars": "^4.7.7",
         "hirestime": "^3.2.1",
         "html2canvas": "^1.3.3",
+        "humanize-duration": "^3.27.1",
         "ifvisible": "^1.1.0",
         "immutable": "3.8.2",
         "indexeddbshim": "^2.2.1",
