--- a/.github/workflows/npm-build-and-deploy.yml
+++ b/.github/workflows/npm-build-and-deploy.yml
@@ -46,3 +46,4 @@ jobs:
                   BRANCH: master
                   FOLDER: build/hash-history
                   SSH_PRIVATE_KEY: ${{ secrets.DEPLOYMENT_KEY }}
+                  MESSAGE: Automatic build of commit {$(git rev-parse --short "$GITHUB_SHA")}
