fix workflow file

--- a/.github/workflows/build-release-binaries.yml
+++ b/.github/workflows/build-release-binaries.yml
@@ -9,9 +9,6 @@ on:
             - "*.*.*"
             # branches: [testaction]
 
-permissions:
-    contents: write
-
 jobs:
     build:
         runs-on: macOS-latest
@@ -88,8 +85,7 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
                   upload_url: ${{ steps.create_release.outputs.upload_url }}
-                  asset_path:
-                      ./build/binaries/BitShares_${{ github.ref_name }}.dmg
+                  asset_path: ./build/binaries/BitShares_${{ github.ref_name }}.dmg
                   asset_name: BitShares_${{ github.ref_name }}.dmg
                   asset_content_type: application/octet-stream
             - name: Upload deb
@@ -98,8 +94,7 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
                   upload_url: ${{ steps.create_release.outputs.upload_url }}
-                  asset_path:
-                      ./build/binaries/BitShares_${{ github.ref_name }}.deb
+                  asset_path: ./build/binaries/BitShares_${{ github.ref_name }}.deb
                   asset_name: BitShares_${{ github.ref_name }}.deb
                   asset_content_type: application/x-deb
             - name: Upload exe
@@ -108,7 +103,6 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
                   upload_url: ${{ steps.create_release.outputs.upload_url }}
-                  asset_path:
-                      ./build/binaries/BitShares_${{ github.ref_name }}.exe
+                  asset_path: ./build/binaries/BitShares_${{ github.ref_name }}.exe
                   asset_name: BitShares_${{ github.ref_name }}.exe
                   asset_content_type: application/octet-stream
